--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "dataset>=1.6.2",
     "markdownify>=1.2.2",
+    "mistune>=3.1.4",
     "playwright>=1.57.0",
     "transformers>=4.57.3",
 ]
