--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "click>=8.3.1",
     "dataset>=1.6.2",
     "markdownify>=1.2.2",
     "mistune>=3.1.4",
     "playwright>=1.57.0",
+    "pylatexenc>=2.10",
     "transformers>=4.57.3",
 ]
 
