--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "mistune>=3.1.4",
     "playwright>=1.57.0",
     "pylatexenc>=2.10",
+    "requests>=2.32.5",
+    "rich>=14.2.0",
     "transformers>=4.57.3",
 ]
 
