--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "dataset>=1.6.2",
     "markdownify>=1.2.2",
     "mistune>=3.1.4",
+    "pillow>=12.0.0",
     "playwright>=1.57.0",
     "pylatexenc>=2.10",
     "requests>=2.32.5",
