--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "click>=8.3.1",
-    "dataset>=1.6.2",
+    "datasets>=4.4.2",
     "markdownify>=1.2.2",
     "mistune>=3.1.4",
     "pillow>=12.0.0",
