--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "pylatexenc>=2.10",
     "requests>=2.32.5",
     "rich>=14.2.0",
+    "tensorboard>=2.6.0",
     "tensorboardx>=2.6.4",
     "torchvision>=0.24.1",
     "transformers>=4.57.3",
