--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "bitsandbytes>=0.49.0",
     "click>=8.3.1",
     "datasets>=4.4.2",
+    "huggingface-hub[cli]>=0.36.0",
     "markdownify>=1.2.2",
     "mistune>=3.1.4",
     "peft>=0.18.0",
